--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Meu Portifolio</title>
 </head>
 <body>
-    
+    <img sfc="avatar-perfil.png" alt="avatar do victor"
+
+<p> eu sou o Victor </p>     
+<n1> eu estudo programação </n1>    
+<p> eu gosto de músicas, de quase todos os gêneros </p>
+
 </body>
 </html>
