--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portifolio</title>
-    <link rel="stylesheet" href="style.css"
-    <title>Meu Portifolio</title>
+    <link rel="stylesheet" href="style.css">
+    <title> Meu Portifolio</title>
 </head>
 
 <body>
     <header>
-    <img src="/img/avatar-perfil.JPG" alt="avatar do victor"
+    <img src="img/avatar-perfil.JPG" alt="avatar do victor">
 
 <p> eu sou o Victor </p>     
-<n1> eu estudo programação </n1>    
+<h1> eu estudo programação </h1>    
 <p> eu gosto de músicas, de quase todos os gêneros </p>
     </header>
 </body>
